\fix redirct on ERROR + module overflow

--- a/src/main/front/modules/allModules/styles.css
+++ b/src/main/front/modules/allModules/styles.css
@@ -6,4 +6,5 @@
   flex-direction: column;
   background-color: aliceblue;
   overflow: auto !important;
+  max-height: 40rem;
 }
